mobile device overflow fix

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -36,7 +36,8 @@ body {
   color: var(--text);
   transition: color 0.5s ease;
   overflow-y: scroll;
-  height: 100vh;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 /* Overlay Fill Animation for Each Section */
